--- a/salv.css
+++ b/salv.css
@@ -23,12 +23,12 @@ h1 {
 
 .shining
 {
-    background: -webkit-gradient(ease, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
+    background: -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
     -webkit-background-size: 125px;
 	color: rgba(255, 255, 255, 0.1);
     -webkit-background-clip: text;
     -webkit-animation-name: shine;
-    -webkit-animation-duration: 2s;
+    -webkit-animation-duration: 20s;
     -webkit-animation-iteration-count: infinite;
 }
 
