--- a/salv.css
+++ b/salv.css
@@ -44,6 +44,15 @@ h1 {
     }
 }
 
+.links {
+	color: black;
+	font-family: "Poiret One";
+	font-size: 22px;
+	text-align: center;
+	margin-top: -2.5%;
+	background-color: none;
+}
+
 body {
 	background: #FFFFFF 
 }
