--- a/salv.css
+++ b/salv.css
@@ -48,6 +48,7 @@ h1 {
 	color: black;
 	font-family: "Poiret One";
 	font-size: 14px;
+	font-weight: 800;
   text-align: center;
   margin-top: -2.5%;
 }
