--- a/salv.css
+++ b/salv.css
@@ -46,7 +46,7 @@ h1 {
 
 .quote {
 	color: black;
-		font-family: "Josefin Sans";
+	font-family: "Poiret One";
 	font-size: 14px;
 	font-weight: 800;
   text-align: center;
